<resources>
    <string name="app_name">Simple Weather</string>
    <string name="toolbar_city_title">Krasnodar</string>
    <string name="api_key">098f7b10-efc0-48af-8fbe-a8f62507cb99</string>
    <string name="api_key_places">57ac35b4-0384-4657-8171-fa6d8daff9e7</string>
    <string name="sunrise_text">dawn</string>
    <string name="sunset_text">sunset</string>
    <string name="now_text">now</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Today">Today</string>
    <string name="Tomorrow">Tomorrow</string>
    <string name="feels_like">Feels like</string>
    <string name="m_in_s">m/s</string>
    <string name="hPa">"hPa"</string>
    <string name="m_s">m/s</string>
    <string name="mock_text">В конструктор передаем старые данные и новые данные. Они понадобятся для сравнения. В методах getOldListSize и getNewListSize просто возвращаем количество записей в старом списке и в новом. А в методах areItemsTheSame и areContentsTheSame нам дают две позиции: одну из старого списка (oldItemPosition) и одну из нового (newItemPosition). Соответственно, мы из списка oldList берем Product с позицией oldItemPosition, а из newList - Product с позицией newItemPosition, и сравниваем их. В чем ключевая разница между areItemsTheSame и areContentsTheSame? Рассмотрим на примере товаров. У Product есть три поля: id, name и price. Для каждой пары сравниваемых товаров DiffUtil сначала вызовет метод areItemsTheSame, чтобы определить, надо ли в принципе сравнивать эти товары. Т.е. cначала достаточно сравнить их по id. Если id не равны, значит это разные товары и сравнивать их цены и наименование нет смысла - скорее всего они также будут отличаться. А вот если id равны, значит товар из старого списка и товар из нового списка - это один и тот же товар и надо определить изменился ли он. В этом случае DiffUtil вызывает метод areContentsTheSame, чтобы определить, есть ли отличия между старым товаром и новым. В этом методе мы сравниваем товары по цене и наименованию. Если они одинаковы, значит товары по указанным позициям в старом и новом списке одинаковы. И биндинг для строки, отображающей этот товар, вызывать не надо, потому что не будет там никаких изменений. А если цена или наименование у нового товара отличается от старого, значит товар изменился и для строки, отображающей этот товар надо будет вызвать биндинг. Т.е. в areItemsTheSame вы сравниваете поля, чтобы в принципе определить, разные ли это объекты. А в areContentsTheSame уже сравниваете детали, чтобы определить, поменялось ли что-то из того, что вы отображаете на экране. Давайте представим, что в Product есть еще одно поле, например - дата поставки. Но в списке отображать это поле не нужно. Учитывать ли это поле в areContentsTheSame? Если вы будете его учитывать, то при изменении только этого поля, строка списка с товаром будет перерисована, но при этом визуально никаких изменений не будет. Это будет лишняя работа. Поэтому в areContentsTheSame имеет смысл использовать только те поля объекта, изменение которых приведет к видимым изменениям строки в списке.</string>
    <string name="wind_header">Wind</string>
    <string name="forecast_morning">Morning</string>
    <string name="forecast_day">Day</string>
    <string name="forecast_evening">Evening</string>
    <string name="forecast_night">Night</string>
    <string name="humidity_header">Humidity</string>
    <string name="pressure_header">Pressure</string>
    <string name="sunrise">Sunrise</string>
    <string name="daylight_hours">Daylight hours</string>
    <string name="magnetic_field">Magnetic field:</string>
    <string name="uv_index">UV Index:</string>
    <string name="to">to</string>
    <string name="hpa">hPa</string>
    <string name="sunset">Sunset</string>
    <string name="full_moon">full moon</string>
    <string name="decreasing_moon">decreasing moon</string>
    <string name="last_quarter">last quarter</string>
    <string name="new_moon">new moon</string>
    <string name="growing_moon">growing moon</string>
    <string name="first_quarter">first quarter</string>
    <string name="search_hint">City or area</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_location">Current location</string>
    <string name="favorites">Favorites</string>
    <string name="search_history">Search history</string>
    <string name="favorite">Favorite</string>
    <string name="rename">Rename</string>
    <string name="remove">Remove</string>
    <string name="location_added_to_favorites">Location added to favorites</string>
    <string name="something_goes_wrong">Something goes wrong</string>
    <string name="refresh">Refresh</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="update">UPDATE</string>
    <string name="check_your_connection">Forecast is out of date — check your connection</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="units_of_measurement">Units of measurement</string>
    <string name="c">°C</string>
    <string name="f">°F</string>
    <string name="km_h">km/h</string>
    <string name="mmhg">mmHg</string>
    <string name="location">Location</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="select_current_place">Select current place</string>
    <string name="other">Other</string>
    <string name="application_needs_to_know">Application needs to know your location in order to show you a precise forecast</string>
    <string name="_continue">CONTINUE</string>
    <string name="select_place">Select place</string>
    <string name="permission">Permission</string>
    <string name="permission_not_granted_message">Application needs to know your location in order to show you a forecast. Allow the app to determine Your location or select a specific location for the forecast?</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="geolocation">Geolocation</string>
    <string name="if_you_enable_it_your_forecast_will_be_more_precise">If you enable it, your forecast will be more precise</string>
    <string name="empty_vaforite_text_1">Add a city, area or specific address to your \</string>
    <string name="empty_vaforite_text_2">Favorites</string>
    <string name="empty_vaforite_text_3">\ to quickly see what the weather is like there.</string>
    <string name="empty_vaforite_text_4">\To add Favorites, first search for them, view their forecast and then tap \</string>
    <string name="enter_location_name_or_exact_address">Enter location name or exact address</string>
    <string name="widget_name">simple weather widget</string>
    <string name="background_color">Background color</string>
    <string name="black_and_white_icons">Black-and-white icons</string>
    <string name="light_theme">Light theme</string>
    <string name="background_transparency">Background transparency</string>
    <string name="opaque">Opaque</string>
    <string name="transparent">Transparent</string>
    <string name="show_time_of_update">Show time of update</string>
    <string name="create_widget">Create widget</string>
    <string name="refresh_required">Refresh required</string>
    <string name="widget_settings">Widget settings</string>

</resources>
